Fix index out of bound bug

--- a/style.css
+++ b/style.css
@@ -95,6 +95,16 @@ body {
 }
 
 .carousel-nav {
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
     flex: 1;
-    background-color: gray;
+    background-color: lightgray;
+    padding: 0.5rem;
+}
+
+.carousel-nav button {
+    border-radius: 25px;
+    width: 20px;
+    height: 20px;
 }
